# eval-integrity

./: CHANGELOG.md  README.md  SKILL.md  demo.tape
fixtures/hardened-benchmark/: .gitignore  README.md  expected-result.json  pyproject.toml
fixtures/hardened-benchmark/.github/workflows/: eval.yml
fixtures/hardened-benchmark/data/public/: scenarios.json
fixtures/hardened-benchmark/docs/: methodology.md
fixtures/hardened-benchmark/eval/: aggregate.py  pre_registration.py  run.py  scoring.py
fixtures/hardened-benchmark/scripts/: generate_data.py
fixtures/hardened-benchmark/tests/: test_null_agent.py
fixtures/publish-ready-benchmark/: .gitignore  README.md  expected-result.json  pyproject.toml
fixtures/publish-ready-benchmark/.github/workflows/: eval.yml
fixtures/publish-ready-benchmark/data/public/: scenarios.json
fixtures/publish-ready-benchmark/docs/: methodology.md
fixtures/publish-ready-benchmark/eval/: aggregate.py  pre_registration.py  resume.py  run.py  scoring.py
fixtures/publish-ready-benchmark/scripts/: generate_data.py  publish.py
fixtures/publish-ready-benchmark/tests/: test_integrity.py
fixtures/weak-benchmark/: README.md  expected-result.json  run_eval.py
fixtures/weak-benchmark/data/: leaderboard.json  scenarios.json
methodology/: contamination.md  holdout-hygiene.md  judge-validity.md  leaderboard-publishing.md  pre-registration.md  reproducibility.md  statistical-honesty.md
schema/: result.schema.json
scripts/: demo_frames.py  render_demo.py
