[project]
name = "acme-code-eval"
version = "0.1.0"
description = "Synthetic fixture benchmark for the eval-integrity skill."
requires-python = "==3.11.*"
dependencies = [
    "numpy==1.26.4",
    "pytest==8.2.0",
]

# Environment is pinned: exact dependency versions above and a uv.lock committed
# alongside (represented here by the pinned requires-python + == pins).

[tool.pytest.ini_options]
pythonpath = ["."]
